[package]
name = "uda-dto"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "DTOs for UDA-dependent libs and bins"
repository = "https://github.com/maxence-cornaton/uda-dto"

[dependencies]
derive-getters = "0.5.0"
serde = { version = "1.0.219" , features = ["derive"]}
chrono = { version = "0.4.41", features = ["serde"] }